--- a/.github/workflows/gencsv.yml
+++ b/.github/workflows/gencsv.yml
@@ -2,7 +2,7 @@ name: Python exec
 
 on:
   schedule:
-    - cron:  '*/15 * * * *'
+    - cron:  '*/5 * * * *'
 
 
 jobs:
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-      uses: actions/setup-python@v1
+    - uses: actions/setup-python@v1
       with:
         python-version: 3.6
     - name: Install dependencies
